--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
   <script src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js" crossorigin></script>
   <script src="https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.production.min.js" crossorigin></script>
   <script src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js" crossorigin></script>
+  <script src="https://kit.fontawesome.com/e3ae8df40e.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
